syntax = "proto3";
package desmos.ibc.applications.profiles.v1;

option go_package = "github.com/desmos-labs/desmos/x/ibc/applications/profiles/types";

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "desmos/ibc/applications/profiles/v1/models.proto";

// Query defines the gRPC querier service.
service Query {
  // UserConnections queries all the connections of a user
  rpc Connections(QueryUserApplicationsLinksRequest) returns (QueryUserApplicationsLinksResponse) {
    option (google.api.http).get = "/desmos/ibc-profiles/v1beta1/apps_links/{user}";
  }
}

// ___________________________________________________________________________________________________________________

// QueryUserConnectionsRequest represent the parameters used to query for user connections
message QueryUserApplicationsLinksRequest {
  string user = 1;
}

// QueryUserConnectionsResponse represents the user connections response
message QueryUserApplicationsLinksResponse {
  repeated desmos.ibc.applications.profiles.v1.ApplicationLink application_links = 1;
}
